@@ -7,6 +7,8 @@ Version 0.6.0: 2011-??-??
 
 	- rvgt.ftable(): argument 'n' must be >= 100.
 
+	- rvgt.ftable(): added support for discrete distributions.
+
 
 Version 0.5.0: 2010-07-12
 
